Fixed editing button overlaping the textarea
git-svn-id: file:///home/gallir/meneame/svn/src@4504 cbe1a1ec-7179-4919-8e32-4551e8279a00

--- a/branches/version5/www/css/mnm.css
+++ b/branches/version5/www/css/mnm.css
@@ -2276,11 +2276,12 @@ text-align: right;
 
 .rich-edit-key {
 color: #fff;
-font-size: 15px;
+font-size: 14px;
 text-align: center;
-height: 25px;
-width: 25px;
-margin-left: 5px;
+height: 20px;
+width: 20px;
+margin: 1px 4px;
+padding-bottom: 3px;
 float: right;
 }
 
